# quanta

./: .clang-format  CMakeLists.txt  LICENSE  README.md  atom.c  atom.h  env.c  env.h  eval.c  eval.h  gc.c  gc.h  intern.c  intern.h  lex.c  lex.h  lisp.txt  log.c  log.h  main.c  primitive.c  primitive.h  print.c  print.h  read.c  read.h  source.c  source.h  special.c  special.h
.github/workflows/: ci.yml
scripts/: gcov.sh
src/: CMakeLists.txt  atom.c  atom.h  env.c  env.h  eval.c  eval.h  gc.c  gc.h  intern.c  intern.h  lex.c  lex.h  log.c  log.h  main.c  primitive.c  primitive.h  print.c  read.c  read.h  source.c  source.h  special.c  special.h  stdlib.qu
tests/: CMakeLists.txt  apply.ml  arithmetic_test.cc  atom.ml  atoms_test.cc  closures.qu  comment_test.cc  cond_test.cc  cons.ml  cons_test.cc  define_test.cc  eval_test.cc  factorial.qu  fn.ml  fn.qu  let_test.cc  parse_failures_test.cc  primitives_test.cc  print_test.cc  quasiquote.qu  quote_test.cc  repl.ml  tco.qu  test_main.cc  use_stdlib.qu
